<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTwo"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/sandwich2" />
    <TextView
        android:id="@+id/textView_addOn"
        style="@style/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/addOn" />

    <RadioGroup
        android:id="@+id/radioGroup_addOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:tag="@string/tea"
            android:id="@+id/radioButton_tea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tea" />

        <RadioButton
            android:tag="@string/coffee"
            android:id="@+id/radioButton_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:layout_marginLeft="50dp"/>

        <RadioButton
            android:tag="@string/frenchFries"
            android:id="@+id/radioButton_frenchFries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frenchFries"
            android:layout_marginLeft="50dp"/>

    </RadioGroup>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="20dp"
            android:text="RM 0.00"
            android:textColor="@color/colorRed"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutTotal" />

        <TextView
            android:id="@+id/textView_total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="204dp"
            android:layout_marginTop="20dp"
            android:text="@string/total"
            android:textColor="@color/colorBrown"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutTotal" />

        <ImageView
            android:id="@+id/imageView_sandwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutTotal"
            app:srcCompat="@drawable/sandwich_icon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorBrown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutTotal" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:background="@color/colorBrown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_total_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/button_order" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_reset" />
    </LinearLayout>
</LinearLayout>